0.55
    - *output() methods now handle tied handles and *FOO{IO} properly.
    - maybe_regex() now handles undef gracefully.
    - maybe_regex() now handles 'm,foo,' style regexes.

0.54
    - sort_bug.t wasn't checking for threads properly.  Would fail on
      5.6 that had ithreads compiled in. [rt.cpan.org 8765]

0.53  Mon Nov 29 04:43:24 EST 2004
    - Apparently its possible to have Module::Signature installed without
      it being functional.  Fixed the signature test to account for this.
      (not a real bug)

0.52  Sun Nov 28 21:41:03 EST 2004
    - plan() now better checks that the given plan is valid. 
      [rt.cpan.org 2597]

0.51_02  Sat Nov 27 01:25:25 EST 2004
    * is_deeply() and all the eq_* functions now handle circular data
      structures.  [rt.cpan.org 7289]
    * require_ok() now handles filepaths in addition to modules.
    - Clarifying Test::More's position on overloaded objects 
    - Fixed a bug introduced in 0.51_01 causing is_deeply() to pierce
      overloaded objects.
    - Mentioning rt.cpan.org for reporting bugs.

0.51_01  Fri Nov 26 02:59:30 EST 2004
    - plan() was accidentally exporting functions [rt.cpan.org 8385]
    * diag @msgs would insert # between arguments. [rt.cpan.org 8392]
    * eq_set() could cause problems under threads due to a weird sort bug
      [rt.cpan.org 6782]
    * undef no longer equals '' in is_deeply() [rt.cpan.org 6837]
    * is_deeply() would sometimes compare references as strings.
      [rt.cpan.org 7031]
    - eq_array() and eq_hash() could hold onto references if they failed
      keeping them in memory and preventing DESTROY.  [rt.cpan.org 7032]
    * is_deeply() could confuse [] with a non-existing value
      [rt.cpan.org 7030]
    - is_deeply() diagnostics a little off when scalar refs were inside
      an array or hash ref [rt.cpan.org 7033]
    - Thanks to Fergal Daly for ferretting out all these long standing 
      is_deeply and eq_* bugs.

0.51  Tue Nov 23 04:51:12 EST 2004