@@ -14,7 +14,7 @@ use Test::More;
 use Test::Builder;
 my $Test = Test::Builder->new;
 
-$Test->plan( tests => 8 );
+$Test->plan( tests => 9 );
 $Test->level(0);
 
 my @Expected_Details;
@@ -29,11 +29,13 @@ push @Expected_Details, { 'ok'      => 1,
 
 # Inline TODO tests will confuse pre 1.20 Test::Harness, so we
 # should just avoid the problem and not print it out.
-my $out_fh = $Test->output;
+my $out_fh  = $Test->output;
+my $todo_fh = $Test->todo_output;
 my $start_test = $Test->current_test + 1;
 require TieOut;
 tie *FH, 'TieOut';
 $Test->output(\*FH);
+$Test->todo_output(\*FH);
 
 SKIP: {
     $Test->skip( 'just testing skip' );
@@ -67,6 +69,7 @@ push @Expected_Details, { 'ok'      => 1,
 
 for ($start_test..$Test->current_test) { print "ok $_\n" }
 $Test->output($out_fh);
+$Test->todo_output($todo_fh);
 
 $Test->is_num( scalar $Test->summary(), 4,   'summary' );
 push @Expected_Details, { 'ok'      => 1,
@@ -91,3 +94,14 @@ $Test->is_num( scalar @details, 6,
 
 $Test->level(1);
 is_deeply( \@details, \@Expected_Details );
+
+
+# This test has to come last because it thrashes the test details.
+{
+    my $curr_test = $Test->current_test;
+    $Test->current_test(4);
+    my @details = $Test->details();
+
+    $Test->current_test($curr_test);
+    $Test->is_num( scalar @details, 4 );
+}
